--- a/intro_to_inverse_problems.tex
+++ b/intro_to_inverse_problems.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{amsart}
+\documentclass[12pt]{article}
 \RequirePackage[l2tabu, orthodox]{nag}
 \usepackage[main=english]{babel}
 \usepackage[rm={lining,tabular},sf={lining,tabular},tt={lining,tabular,monowidth}]{cfr-lm}
@@ -7,9 +7,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage[pdftex]{graphicx}
 \usepackage{epstopdf,enumitem,microtype,dcolumn,booktabs,hyperref,url,fancyhdr}
-\usepackage[margin=2.7182818284590452353602874713526624977572470936999cm]{geometry}
-\pagestyle{fancy}
-\setlength{\headheight}{15pt}
 
 % Plotting
 \usepackage{pgfplots}
@@ -36,10 +33,104 @@
 \setlist[1]{leftmargin=\parindent}
 \setlist[enumerate,1]{label=\arabic*.,ref=\arabic*}
 \setlist[enumerate,2]{label=(\alph*),ref=(\alph*)}
+
+% Specifically for paper formatting 
+\renewcommand{\baselinestretch}{1.2} % Spaces manuscript for easy reading
+
+
 \begin{document}
 
-\section{Introduction} 
-The study of inverse problems is generally concerned with approximating an unknown value using potentially corrupted or noisy data. The study of such problems finds many applications across the physical, social, and mathematical sciences. 
+\begin{center}
+\Large
+A Brief Introduction to Linear Inverse Problems in Hilbert Space
+\end{center}
+
+\begin{flushright}
+Andrew Roberts
+\end{flushright} 
+
+The study of inverse problems is generally concerned with approximating 
+an unknown value using potentially corrupted or noisy data. The study of 
+such problems finds many applications across the physical, social, and 
+mathematical sciences. 
+
+This document is meant to help you prepare an Article for
+submission to \textsc{Mathematics Magazine}.  Of course,
+editorial decisions depend entirely on
+what you say and how you say it. Nonetheless, we will all save
+time if you exercise some care in how you first present the paper.
+
+Now that I have caught your attention with an interesting introductory paragraph,
+here is what you will find:
+specific information about the style of Articles in the \textsc{Magazine}
+and a description of the \LaTeX\ code we prefer that you use
+to prepare your manuscript.
+
+Since this section is very clearly
+an introduction, I thought that labeling it ``Introduction" would add
+nothing.  Note that I am willing to use the first person in an Article
+and you might be as well.  Another equally respectable choice is ``we,''
+even when there is only one author; this can
+create an author-reader partnership to
+work through the mathematics together.
+Whatever voice you choose, consistency is important.
+
+
+\subsection*{Introduction to Inverse Problems} 
+Students of linear algebra may recall the prominence of the matrix equation
+\begin{equation} 
+Ax = b. \label{matrix_eqn}
+\end{equation}  
+Here we may consider $A$ as a linear map 
+that acts on a given vector $x$ and produces the output vector $b$. 
+This constitutes the ``forward problem'' in which we are given inputs and must 
+calculate outputs. The corresponding ``inverse problem'' reverses the situation; we observe 
+$b$ and must determine the input $x$ which produced it. In its simplest form we may assume 
+$A$ is invertible, in which case the solution to the inverse problem is given by matrix 
+inversion: $x = A^{-1}b$. This paper introduces a vast generalization of this inverse 
+problem framework, shedding the simplifying assumptions of finite dimensionality
+and invertibility. The motivation for such a general theory 
+of inverse problems will become clear with examples, as the majority of interesting 
+applications fail to enjoy the ``well-posedness'' of the above equation. 
+To make these notions concrete, consider the following mapping:
+\begin{eqnarray} 
+&F: X \to Y \\
+&F(x) = y \label{inverse_problem}
+\end{eqnarray} 
+This equation, which generalizes the above matrix equation, will constitute the primary subject 
+of our analysis. The goal remains to compute $x$ given $y$. Note that I have been intentionally 
+vague regarding specific properties of the map $F$ or spaces $X$ and $Y$. Indeed, varying the assumptions 
+placed on these objects lead to drastically different avenues of analysis and conceptual interpretations
+of inverse problems. 
+
+\paragraph{Ill-Posedness}
+
+If all real-world examples of inverse problems admitted straightforward representations as in \ref{matrix_eqn}
+then the field of inverse problem theory would not exist. The essence of the field is in developing methods to 
+deal with the difficult cases. The following definition highlights the central difficulties that can occur, 
+and motivates much of the theory discussed in this paper. 
+
+
+
+
+
+Before introducing the assumptions that will guide the remainder of this paper, I briefly
+state two alternative viewpoints that will not be discussed here. 
+
+\paragraph*{Statistical Estimation}
+
+Introduce the concept of residuals and give the statistical interpretation. Then talk about regularization briefly
+and Bayesian inverse problems. 
+
+\paragraph*{Non-linear Problems}
+
+Give some examples and talk briefly about the close connection with differential equations. 
+
+It is important to note that these assumptions are not mutually exclusive; the realities of specific applications
+may necessitate various sets of assumptions. 
+
+
+
 \textbf{TODO}
 \begin{enumerate} 
 \item Brief history of field
@@ -50,13 +141,7 @@ The study of inverse problems is generally concerned with approximating an unkno
 \section{Inverse Problems}
 
 \subsection{Introduction} \hfill \\
-Students of linear algebra may recall the prominence of the matrix equation $\textbf{Ax} = \textbf{b}$. Here we may consider $\textbf{A}$ as a linear map that acts on a given vector $\textbf{x}$ and produces the output vector $\textbf{b}$. This constitutes the ``forward problem'' in which we are given inputs and must calculate outputs. The corresponding ``inverse problem'' reverses the situation; we observe $\textbf{b}$ and must determine the input $\textbf{x}$. In its simplest form we may assume $\textbf{A}$ is invertible, in which case the solution to the inverse problem simply involves matrix inversion: $x = A^{-1}b$. This paper introduces a vast generalization of this inverse problem framework, shedding the simplifying assumptions of finite dimensionality, invertibility, and existence of a solution. The motivation for such a general theory of inverse problems will become clear with examples, as the majority of interesting applications fail to enjoy the ``well-posedness'' of the above equation. To make these notions concrete, consider the following equation:
-
-\begin{align*} 
-&F: X \to Y && F(x) = y && (1.1)
-\end{align*} 
-
-This equation, which generalizes the above matrix equation, will constitute the primary subject of our analysis. The goal remains to compute $x$ given $y$. For the time being, I have been intentionally vague regarding specific properties of the map $F$ or spaces $X$ and $Y$. The ensuing sections will demonstrate that different assumptions about these objects will result in different avenues for analysis and produce different results. 
+ 
 
 \subsection{Ill-Posed Problems} \hfill \\
 The following definition highlights the central difficulties in studying inverse problems, and motivates much of the theory discussed in this paper. \\
